refactor(header): toggle修正 #80

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="header">
   <div class="header__left">
-    <button class="menu" (click)="toggle()" mat-icon-button>
+    <button class="menu" (click)="drawerService.toggle()" mat-icon-button>
       <mat-icon>menu</mat-icon>
     </button>
     <a routerLink="/" class="logo">
