--- a/src/app/card-list/card-list/card-list.component.html
+++ b/src/app/card-list/card-list/card-list.component.html
@@ -1,12 +1,12 @@
 <div class="container">
   <h2 class="heading">
-    <span>{{ genreList.name }} 人気ランキング</span>
+    <span>{{ cardCategory.name }} 人気ランキング</span>
   </h2>
   <div class="grid">
     <app-item-card
       *ngFor="let card of cards$ | async"
       [card]="card"
-      [cardType]="genreList.id"
+      [cardType]="cardCategory.type"
     ></app-item-card>
   </div>
 </div>
