--- a/src/app/compare/compare/compare.component.html
+++ b/src/app/compare/compare/compare.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="compare">
     <h1 class="compare__title">
-      <span>{{ genreList.name }}を</span>
+      <span>{{ cardCategory.name }}を</span>
       <span>比較する</span>
     </h1>
     <div class="compare__wrapper">
@@ -40,7 +40,9 @@
           </div>
         </div>
         <ng-container
-          *ngIf="genreList.id === 'code' || genreList.id === 'electron'"
+          *ngIf="
+            cardCategory.type === 'code' || cardCategory.type === 'electron'
+          "
         >
           <div class="row">
             <h2 class="row__header">精算方法</h2>
@@ -86,7 +88,7 @@
             </p>
           </div>
         </div>
-        <div *ngIf="genreList.id != 'credit'" class="row">
+        <div *ngIf="cardCategory.type != 'credit'" class="row">
           <h2 class="row__header">残高やポイントの有効期限</h2>
           <div class="row__grid">
             <p *ngFor="let card of selectedCards$ | async">
@@ -94,7 +96,7 @@
             </p>
           </div>
         </div>
-        <ng-container *ngIf="genreList.id === 'code'">
+        <ng-container *ngIf="cardCategory.type === 'code'">
           <div class="row">
             <h2 class="row__header">個人間送金</h2>
             <div class="row__grid">
@@ -112,7 +114,7 @@
             </div>
           </div>
         </ng-container>
-        <ng-container *ngIf="genreList.id === 'credit'">
+        <ng-container *ngIf="cardCategory.type === 'credit'">
           <div class="row">
             <h2 class="row__header">貯まるポイント</h2>
             <div class="row__grid">
