--- a/src/app/shared/item-card/item-card.component.html
+++ b/src/app/shared/item-card/item-card.component.html
@@ -1,10 +1,10 @@
 <mat-card>
-  <mat-card-content class="content">
+  <mat-card-content class="card">
     <div
-      class="content__cover"
+      class="card__cover"
       [style.background-image]="'url(' + card.imageURL + ')'"
     ></div>
-    <div class="content__title">
+    <div class="card__title">
       <h3>{{ card.name }}</h3>
     </div>
   </mat-card-content>
