refactor(component): 不要になったcomponent削除 #80

--- a/src/app/drawer/drawer.component.html
+++ b/src/app/drawer/drawer.component.html
@@ -5,25 +5,25 @@
   </a>
   <mat-divider></mat-divider>
   <h2 mat-subheader>カテゴリ</h2>
-  <a mat-list-item routerLink="/code-card">
+  <a mat-list-item routerLink="/card-list/code">
     <div class="icon">
       <img src="/assets/images/icons/code.png" alt="" />
     </div>
     <p>モバイル決済</p></a
   >
-  <a mat-list-item routerLink="/electron-card">
+  <a mat-list-item routerLink="/card-list/electron">
     <div class="icon">
       <img src="/assets/images/icons/ic.png" alt="" />
     </div>
     <p>電子マネー</p>
   </a>
-  <a mat-list-item routerLink="/credit-card">
+  <a mat-list-item routerLink="/card-list/credit">
     <div class="icon">
       <img src="/assets/images/icons/credit.png" alt="" />
     </div>
     <p>クレジットカード</p>
   </a>
-  <a mat-list-item routerLink="/point-card">
+  <a mat-list-item routerLink="/card-list/point">
     <div class="icon">
       <img src="/assets/images/icons/point2.png" alt="" />
     </div>
